[package]
name = "gamers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13" , features = ["json"] }
tokio = {version = "1.23.0", features = ["full"]}
ffmpeg-next = "5.1.1"
serde_json = "1.0.91"
clap = { version = "4.0.32", features = ["derive"] }

